# api-v10/storage/api-docs/api-docs.json
@@ -134,143 +134,6 @@
                 }
             }
         },
-        "/api/festividades/registrar": {
-            "post": {
-                "tags": [
-                    "Festividades"
-                ],
-                "summary": "Crea una nueva festividad",
-                "description": "Este método crea una nueva festividad con los detalles proporcionados en la solicitud.",
-                "operationId": "b1d92cc3c7d31858955118bb8b0b550e",
-                "requestBody": {
-                    "description": "Datos necesarios para crear una nueva festividad",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "data": {
-                                        "properties": {
-                                            "id_tipo_servicio": {
-                                                "type": "integer",
-                                                "example": 1
-                                            },
-                                            "calle": {
-                                                "type": "string",
-                                                "example": "Calle 123"
-                                            },
-                                            "municipio": {
-                                                "type": "string",
-                                                "example": "Ciudad de México"
-                                            },
-                                            "CP": {
-                                                "type": "string",
-                                                "example": "06720"
-                                            },
-                                            "int": {
-                                                "type": "string",
-                                                "example": "1"
-                                            },
-                                            "ext": {
-                                                "type": "string",
-                                                "example": "2"
-                                            },
-                                            "colonia": {
-                                                "type": "string",
-                                                "example": "Roma Norte"
-                                            },
-                                            "dias_servicio": {
-                                                "type": "string",
-                                                "example": "Lunes a Viernes"
-                                            },
-                                            "horario_inicio": {
-                                                "type": "string",
-                                                "example": "09:00"
-                                            },
-                                            "horario_fin": {
-                                                "type": "string",
-                                                "example": "18:00"
-                                            },
-                                            "precio": {
-                                                "type": "string",
-                                                "example": "100-200"
-                                            },
-                                            "titulo": {
-                                                "type": "string",
-                                                "example": "Fiesta de la Primavera"
-                                            },
-                                            "descripcion": {
-                                                "type": "string",
-                                                "example": "Una descripción detallada de la festividad"
-                                            },
-                                            "latitud": {
-                                                "type": "string",
-                                                "example": "19.4326"
-                                            },
-                                            "longitud": {
-                                                "type": "string",
-                                                "example": "99.1332"
-                                            },
-                                            "imgPrincipal": {
-                                                "type": "string",
-                                                "format": "binary"
-                                            },
-                                            "arrayGaleria": {
-                                                "type": "array",
-                                                "items": {
-                                                    "type": "string",
-                                                    "format": "binary"
-                                                }
-                                            },
-                                            "id_estado": {
-                                                "type": "integer",
-                                                "example": 1
-                                            },
-                                            "id_usuario": {
-                                                "type": "integer",
-                                                "example": 1
-                                            },
-                                            "id_pueblo": {
-                                                "type": "integer",
-                                                "example": 1
-                                            }
-                                        },
-                                        "type": "object"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Festividad creada exitosamente",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "properties": {
-                                                "success": {
-                                                    "type": "string",
-                                                    "example": "ok"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Solicitud inválida"
-                    }
-                }
-            }
-        },
         "/api/observaciones": {
             "post": {
                 "tags": [
@@ -333,6 +196,160 @@
                     },
                     "422": {
                         "description": "Datos de entrada no válidos"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/forgot-password": {
+            "post": {
+                "tags": [
+                    "PasswordReset"
+                ],
+                "summary": "Solicitar restablecimiento de contraseña",
+                "operationId": "e80f3adc39e0717d6308e6c26ebdb7fb",
+                "requestBody": {
+                    "description": "Correo electrónico del usuario",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "user_name": {
+                                        "description": "El correo electrónico del usuario",
+                                        "type": "string",
+                                        "format": "email"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "description": "Estado del envío del enlace de restablecimiento de contraseña",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "user_name": {
+                                            "description": "Estado del envío del enlace de restablecimiento de contraseña",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/password/reset": {
+            "post": {
+                "tags": [
+                    "PasswordReset"
+                ],
+                "summary": "Restablecer contraseña",
+                "operationId": "a845907be08eb3116f2a3df0450c5454",
+                "requestBody": {
+                    "description": "Datos para restablecer la contraseña",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "token": {
+                                        "description": "El token de restablecimiento de contraseña",
+                                        "type": "string"
+                                    },
+                                    "user_name": {
+                                        "description": "El correo electrónico del usuario",
+                                        "type": "string",
+                                        "format": "email"
+                                    },
+                                    "password": {
+                                        "description": "La nueva contraseña",
+                                        "type": "string",
+                                        "format": "password"
+                                    },
+                                    "password_confirmation": {
+                                        "description": "Confirmación de la nueva contraseña",
+                                        "type": "string",
+                                        "format": "password"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "status": {
+                                                    "description": "Estado del restablecimiento de contraseña",
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "user_name": {
+                                            "type": "array",
+                                            "items": {
+                                                "description": "Estado del restablecimiento de contraseña",
+                                                "type": "string"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -1285,83 +1302,6 @@
                     "id_estado": {
                         "type": "integer",
                         "example": 21
-                    }
-                },
-                "type": "object"
-            },
-            "Festividades": {
-                "title": "Festividades",
-                "description": "Modelo para representar Festividades",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "id_direccion": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "id_usuario": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "id_pueblo": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "id_estatus": {
-                        "type": "integer",
-                        "example": 1
-                    }
-                },
-                "type": "object"
-            },
-            "FestividadesDetalles": {
-                "title": "FestividadesDetalles",
-                "description": "Modelo para representar los detalles de las Festividades",
-                "properties": {
-                    "dias_servicio": {
-                        "type": "string",
-                        "example": "Lunes a Viernes"
-                    },
-                    "precios": {
-                        "type": "string",
-                        "example": "100-200"
-                    },
-                    "titulo": {
-                        "type": "string",
-                        "example": "Fiesta de la Primavera"
-                    },
-                    "descripcion": {
-                        "type": "string",
-                        "example": "Una descripción detallada de la festividad"
-                    },
-                    "id_coordenadas": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "id_festividad": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "id_horarios": {
-                        "type": "integer",
-                        "example": 1
-                    }
-                },
-                "type": "object"
-            },
-            "FestividadesImagenes": {
-                "title": "FestividadesImagenes",
-                "description": "Modelo para representar las Imágenes de las Festividades",
-                "properties": {
-                    "id_servicio": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "id_imagen": {
-                        "type": "integer",
-                        "example": 1
                     }
                 },
                 "type": "object"
